# dismissal_predict_v2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
airflow/dags/: dismissal_predict.py
custom_confi/dashboard/: dash.py
custom_configs/airflow/dags/: dismissal_predict.py
custom_configs/dashboard/: config.json  dash.py
custom_configs/terminator/: config
dismissal_predict/: __init__.py  config.py  dataset.py  features.py  final_prepare_df.py  plots.py  prepare_dataset.py
dismissal_predict/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
